# parallel-programming-2018

1606-3/batashev_ay/lab1/: CMakeLists.txt  main.cpp
1606-3/batashev_ay/lab3/: CMakeLists.txt  main.cpp  merge.cpp  merge.h  mpilab3.cpp  parmerge.cpp  radix_sort.cpp  radix_sort.h
1606-3/batashev_ay/spring_lab_1/: CMakeLists.txt  main.cpp
1606-3/batashev_ay/spring_labs/: CMakeLists.txt
1606-3/batashev_ay/spring_labs/omp/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  merge.h  radix.cpp  test.cpp
1606-3/batashev_ay/spring_labs/seq/: CMakeLists.txt  main.cpp
1606-3/batashev_ay/spring_labs/tbb/: CMakeLists.txt  main3.cpp  merge.cpp  radix.h
